generator client {
  provider        = "prisma-client"
  output          = "../lib/generated/prisma"
  previewFeatures = ["partialIndexes", "relationJoins"]
}

datasource db {
  provider = "postgresql"
}

enum ApprovalStep {
  advisor
  admin
  executive

  @@map("approval_step")
}

enum Decision {
  pending
  approved
  returned
  rejected

  @@map("decision")
}

enum LoanStatus {
  draft
  returned
  pending_advisor
  pending_admin
  pending_executive
  pending_disbursement
  disbursed
  closed
  rejected
  cancelled

  @@map("loan_status")
}

enum UserRoleName {
  student
  advisor
  admin
  super_admin
  executive

  @@map("user_role_name")
}

enum FundTransactionKind {
  top_up
  withdrawal
  credit_adjustment
  debit_adjustment
  disbursement
  repayment

  @@map("fund_transaction_kind")
}

enum PaymentStatus {
  pending_review
  confirmed
  rejected

  @@map("payment_status")
}

enum NotificationStatus {
  pending
  processing
  retry
  delivered
  failed

  @@map("notification_status")
}

model AppUser {
  id                   String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  email                String            @unique(map: "app_user_email_key") @db.Text
  cmuAccount           String            @unique(map: "app_user_cmu_account_key") @map("cmu_account") @db.Text
  studentCode          String?           @unique(map: "app_user_student_code_key") @map("student_code") @db.Text
  fullNameTh           String            @map("full_name_th") @db.Text
  fullNameEn           String?           @map("full_name_en") @db.Text
  phone                String?           @db.Text
  educationLevel       String?           @map("education_level") @db.Text
  createdAt            DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt            DateTime          @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(6)
  studentLoans         LoanRequest[]     @relation("StudentLoans")
  advisorLoans         LoanRequest[]     @relation("AdvisorLoans")
  cancelledLoans       LoanRequest[]     @relation("CancelledLoans")
  assignedAdminLoans   LoanRequest[]     @relation("AssignedAdminLoans")
  approvalDecisions    LoanApproval[]
  confirmedPayments    Payment[]
  fundTransactions     FundTransaction[]
  auditLogs            AuditLog[]
  roles                UserRole[]        @relation("UserRoles")
  grantedRoles         UserRole[]        @relation("GrantedRoles")
  systemSettingUpdates SystemSetting[]

  @@index([fullNameTh], map: "app_user_full_name_th_idx")
  @@map("app_user")
}

model LoanRequest {
  id               String            @id @default(dbgenerated("next_loan_request_id()")) @db.Text
  studentId        String            @map("student_id") @db.Uuid
  advisorId        String            @map("advisor_id") @db.Uuid
  assignedAdminId  String?           @map("assigned_admin_id") @db.Uuid
  amount           Int               @db.Integer
  approvedAmount   Int?              @map("approved_amount") @db.Integer
  studentYear      Int               @map("student_year") @db.SmallInt
  purpose          String            @db.Text
  additionalNote   String?           @map("additional_note") @db.Text
  bankName         String            @map("bank_name") @db.Text
  bankAccountNo    String            @map("bank_account_no") @db.Text
  bankAccountName  String            @map("bank_account_name") @db.Text
  installmentCount Int               @map("installment_count") @db.SmallInt
  firstDueDate     DateTime          @map("first_due_date") @db.Date
  status           LoanStatus        @default(draft)
  submittedAt      DateTime?         @map("submitted_at") @db.Timestamptz(6)
  cancelledAt      DateTime?         @map("cancelled_at") @db.Timestamptz(6)
  cancelledBy      String?           @map("cancelled_by") @db.Uuid
  disbursedAt      DateTime?         @map("disbursed_at") @db.Timestamptz(6)
  closedAt         DateTime?         @map("closed_at") @db.Timestamptz(6)
  createdAt        DateTime          @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt        DateTime          @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(6)
  student          AppUser           @relation("StudentLoans", fields: [studentId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  advisor          AppUser           @relation("AdvisorLoans", fields: [advisorId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  assignedAdmin    AppUser?          @relation("AssignedAdminLoans", fields: [assignedAdminId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  cancelledByUser  AppUser?          @relation("CancelledLoans", fields: [cancelledBy], references: [id], onDelete: NoAction, onUpdate: NoAction)
  approvals        LoanApproval[]
  installments     Installment[]
  payments         Payment[]
  fundTransactions FundTransaction[]

  @@unique([studentId], map: "one_open_loan_per_student", where: raw("status <> ALL (ARRAY['closed'::loan_status, 'rejected'::loan_status, 'cancelled'::loan_status])"))
  @@index([advisorId, status], map: "loan_request_advisor_idx")
  @@index([studentId], map: "loan_request_student_idx")
  @@index([assignedAdminId, status], map: "loan_request_assigned_admin_idx")
  @@map("loan_request")
}

model LoanApproval {
  id        BigInt       @id @default(autoincrement())
  loanId    String       @map("loan_id") @db.Text
  step      ApprovalStep
  attempt   Int          @default(1) @db.SmallInt
  decision  Decision     @default(pending)
  decidedBy String?      @map("decided_by") @db.Uuid
  decidedAt DateTime?    @map("decided_at") @db.Timestamptz(6)
  comment   String?      @db.Text
  createdAt DateTime     @default(now()) @map("created_at") @db.Timestamptz(6)
  loan      LoanRequest  @relation(fields: [loanId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  decider   AppUser?     @relation(fields: [decidedBy], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@unique([loanId, step, attempt], map: "loan_approval_loan_id_step_attempt_key")
  @@unique([loanId, step], map: "loan_approval_one_pending_key", where: { decision: "pending" })
  @@map("loan_approval")
}

model Installment {
  id         BigInt      @id @default(autoincrement())
  loanId     String      @map("loan_id") @db.Text
  seq        Int         @db.SmallInt
  dueDate    DateTime    @map("due_date") @db.Date
  amountDue  Int         @map("amount_due") @db.Integer
  amountPaid Int         @default(0) @map("amount_paid") @db.Integer
  settledAt  DateTime?   @map("settled_at") @db.Timestamptz(6)
  loan       LoanRequest @relation(fields: [loanId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  payments   Payment[]

  @@unique([seq, loanId], map: "installment_loan_id_seq_key")
  @@index([dueDate], map: "installment_due_idx", where: { settledAt: null })
  @@map("installment")
}

model Payment {
  id            String        @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  loanId        String        @map("loan_id") @db.Text
  installmentId BigInt?       @map("installment_id")
  amount        Int           @db.Integer
  slipPath      String?       @map("slip_path") @db.Text
  slipRef       String?       @unique(map: "payment_slip_ref_key") @map("slip_ref") @db.Text
  status        PaymentStatus @default(pending_review)
  // confirmedBy/confirmedAt are written for a rejection too: they mean "the reviewer, and when".
  confirmedBy   String?       @map("confirmed_by") @db.Uuid
  confirmedAt   DateTime?     @map("confirmed_at") @db.Timestamptz(6)
  reviewNote    String?       @map("review_note") @db.Text
  paidAt        DateTime?     @map("paid_at") @db.Timestamptz(6)
  createdAt     DateTime      @default(now()) @map("created_at") @db.Timestamptz(6)
  loan          LoanRequest   @relation(fields: [loanId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  installment   Installment?  @relation(fields: [installmentId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  confirmer     AppUser?      @relation(fields: [confirmedBy], references: [id], onDelete: NoAction, onUpdate: NoAction)

  fundTransactions FundTransaction[]

  @@index([loanId], map: "payment_loan_idx")
  @@map("payment")
}

model FundTransaction {
  id          BigInt              @id @default(autoincrement())
  kind        FundTransactionKind
  amount      Int                 @db.Integer
  direction   Int                 @db.SmallInt
  loanId      String?             @map("loan_id") @db.Text
  paymentId   String?             @map("payment_id") @db.Uuid
  performedBy String              @map("performed_by") @db.Uuid
  slipPath    String?             @map("slip_path") @db.Text
  note        String?             @db.Text
  createdAt   DateTime            @default(now()) @map("created_at") @db.Timestamptz(6)
  loan        LoanRequest?        @relation(fields: [loanId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  payment     Payment?            @relation(fields: [paymentId], references: [id], onDelete: NoAction, onUpdate: NoAction)
  performer   AppUser             @relation(fields: [performedBy], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@unique([loanId], map: "fund_transaction_one_disbursement_per_loan", where: { kind: "disbursement" })
  @@unique([paymentId], map: "fund_transaction_one_repayment_per_payment", where: { kind: "repayment" })
  @@index([loanId], map: "fund_transaction_loan_idx")
  @@map("fund_transaction")
}

model NotificationOutbox {
  id           String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  dedupeKey    String             @unique(map: "notification_outbox_dedupe_key") @map("dedupe_key") @db.Text
  eventType    String             @map("event_type") @db.Text
  payload      Json               @db.JsonB
  status       NotificationStatus @default(pending)
  attemptCount Int                @default(0) @map("attempt_count") @db.Integer
  availableAt  DateTime           @default(now()) @map("available_at") @db.Timestamptz(6)
  deliveredAt  DateTime?          @map("delivered_at") @db.Timestamptz(6)
  lastError    String?            @map("last_error") @db.Text
  createdAt    DateTime           @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt    DateTime           @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(6)

  @@index([status, availableAt], map: "notification_outbox_status_available_at_idx")
  @@map("notification_outbox")
}

model AuditLog {
  id         BigInt   @id @default(autoincrement())
  actorId    String   @map("actor_id") @db.Uuid
  action     String   @db.Text
  entityType String   @map("entity_type") @db.Text
  entityId   String   @map("entity_id") @db.Text
  before     Json?    @db.JsonB
  after      Json?    @db.JsonB
  createdAt  DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  actor      AppUser  @relation(fields: [actorId], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@index([entityType, entityId], map: "audit_log_entity_idx")
  @@map("audit_log")
}

model UserRole {
  userId    String       @map("user_id") @db.Uuid
  role      UserRoleName
  grantedBy String?      @map("granted_by") @db.Uuid
  grantedAt DateTime     @default(now()) @map("granted_at") @db.Timestamptz(6)
  user      AppUser      @relation("UserRoles", fields: [userId], references: [id], onDelete: Cascade, onUpdate: NoAction)
  granter   AppUser?     @relation("GrantedRoles", fields: [grantedBy], references: [id], onDelete: NoAction, onUpdate: NoAction)

  @@id([userId, role], map: "user_role_pkey")
  @@unique([role], map: "one_executive_only", where: { role: "executive" })
  @@map("user_role")
}

// System-wide display settings shown to every signed-in user (the receiving bank account and the
// office contact block). Deliberately standalone: no relation to LoanRequest, Payment, or
// FundTransaction. A singleton row (id is always 1, enforced by a CHECK in the migration) edited
// only by SuperAdmin.
model SystemSetting {
  id                Int      @id @default(1) @db.SmallInt
  bankName          String   @map("bank_name") @db.Text
  accountName       String   @map("account_name") @db.Text
  accountNumber     String   @map("account_number") @db.Text
  contactLocationTh String   @map("contact_location_th") @db.Text
  contactLocationEn String?  @map("contact_location_en") @db.Text
  contactPhone      String   @map("contact_phone") @db.Text
  contactExt        String?  @map("contact_ext") @db.Text
  contactEmail      String   @map("contact_email") @db.Text
  updatedById       String?  @map("updated_by_id") @db.Uuid
  createdAt         DateTime @default(now()) @map("created_at") @db.Timestamptz(6)
  updatedAt         DateTime @default(now()) @updatedAt @map("updated_at") @db.Timestamptz(6)
  updatedBy         AppUser? @relation(fields: [updatedById], references: [id], onDelete: SetNull, onUpdate: NoAction)

  @@map("system_setting")
}
